  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
mm/dd/yy richardjgowers, kain88-de, lilyminium, p-j-smith, bdice, joaomcteixeira,
         PicoCentauri, davidercruz, jbarnoud, RMeli, IAlibay, mtiberti, CCook96,
         Yuan-Yu, xiki-tempula, HTian1997, Iv-Hristov, hmacdope, AnshulAngaria,
         ss62171, Luthaf, yuxuanzhuang, abhishandy, mlnance

  * 0.21.0

Fixes
  * Updated tests to have explicit fixtures (Issue #2618)
  * XDR offsets now read from trajectory if offsets file read-in fails on
    IOError (Issue #1893, PR #2611)
  * Fixed the deprecation warning from `collections` library in `flatten_dict`
    (Issue #2605)
  * Fixed test for the `save_paths` and `load` methods of :class:`PSAnalysis`
    (Issue #2593)
  * Fixes outdated :class:`TRJReader` documentation on random frame access
    (Issue #2398)
  * Fixed mda.Merge for Universes without coordinates (Issue #2470)(PR #2580)
  * PCA(align=True) now correctly aligns the trajectory and computes the
    correct means and covariance matrix (Issue #2561)
  * Correct args order of base.AnalysisFromFunction (Issue #2503)  
  * encore.dres() returns dimensionality reduction details instead of a
    reference to itself (Issue #2471)
  * Handle exception when PDBWriter is trying to remove an invalid StringIO
    (Issue #2512)
  * Clarifies density_from_Universe docs and adds user warning (Issue #2372)
  * Fix upstream deprecation of `matplotlib.axis.Tick` attributes in 
    `MDAnalysis.analysis.psa`
  * PDBWriter now uses first character of segid as ChainID (Issue #2224)
  * Adds a more detailed warning when attempting to read chamber-style parm7
    files (Issue #2475)
  * ClusterCollection.get_ids now returns correctly (Issue #2464)
  * Removes files for stubs mainly introduced in 0.11.0 (Issue #2443)
  * Removes support for reading AMBER NetCDF files with `cell_angle` units set