@@ -138,6 +138,7 @@ Chronological list of authors
   - Yuxuan Zhuang
   - Abhishek Shandilya
   - Morgan L. Nance
+  - Faraaz Shah
 
 External code
 -------------
